--- a/operations-repo-structure/index.html
+++ b/operations-repo-structure/index.html
@@ -589,9 +589,11 @@
 │   │   ├── bitops.before-deploy.d
 │   │   └── bitops.config.yml
 │   ├── helm
-│   │   ├── bitops.after-deploy.d
-│   │   ├── bitops.before-deploy.d
-│   │   └── bitops.config.yml
+│   │   ├── chartA
+│   │   │   └── bitops.config.yml
+│   │   └── chartB
+│   │       └── bitops.config.yml
+│   │   └── bitops.config.yml
 │   └── terraform
 │       ├── bitops.after-deploy.d
 │       ├── bitops.before-deploy.d
@@ -605,9 +607,11 @@
     │   ├── bitops.after-deploy.d
     │   ├── bitops.before-deploy.d
     │   └── bitops.config.yml
-    ├── helm
-    │   ├── bitops.after-deploy.d
-    │   ├── bitops.before-deploy.d
+    ├── helm
+    │   ├── chartA
+    │   │   └── bitops.config.yml
+    │   └── chartB
+    │       └── bitops.config.yml
     │   └── bitops.config.yml
     └── terraform
         ├── bitops.after-deploy.d
@@ -621,6 +625,7 @@
 <h4 id="tool-directories">Tool directories</h4>
 <p>Within an environment directory are directories grouping supported tools by name. Each of these directories is optional. For example, if your application only requires <code>terraform/</code> to execute, you do not need an <code>ansible/</code>, <code>cloudformation/</code> or <code>helm/</code> directory in your environment.</p>
 <p>This directory is also where you put your infrastructure code associated with the respective tool.</p>
+<p>Helm has additional capabilities here. You can nest multiple charts within the <code>helm/</code> directory of a given environment. Bitops will auto-detect and install these charts in alphabetical order.</p>
 <h4 id="lifecycle-directories">Lifecycle directories</h4>
 <p>Within a tool directory, you can optionally have a <code>bitops.before-deploy.d/</code> and/or a <code>bitops.after-deploy.d/</code>. You can put arbitrary <code>*.sh</code> scripts in here and they will be run before or after the tool executes. More for information see <a href="../lifecycle/">lifecycle</a> docs.</p>
 <p>If bitops is reporting it can't find your scripts, make sure the scripts have execute permissions.</p>
