--- a/contributing/contributing/index.html
+++ b/contributing/contributing/index.html
@@ -539,12 +539,12 @@
                 
                 <h1 id="how-to-contribute">How to Contribute</h1>
 <p>We'd love to accept your patches and contributions to this project. There are just a few small guidelines you need to follow.</p>
-<p>When you are ready to get started developing, see our <a href="contributing/development.md">development guide</a> for how to get started!</p>
+<p>When you are ready to get started developing, see our <a href="../development/">development guide</a> for how to get started!</p>
 <h2 id="developer-certificate-of-origin">Developer Certificate of Origin</h2>
 <p>To contribute to this project, you must agree to the Developer Certificate of
 Origin (DCO) for each commit you make. The DCO is a simple statement that you,
 as a contributor, have the legal right to make the contribution.</p>
-<p>See the <a href="contributing/DCO.md">DCO</a> file for the full text of what you must agree to.</p>
+<p>See the <a href="../DCO/">DCO</a> file for the full text of what you must agree to.</p>
 <p>To signify that you agree to the DCO for a commit, you add a line to the git
 commit message:</p>
 <pre><code class="txt">Signed-off-by: Jane Smith &lt;jane.smith@example.com&gt;
