--- a/examples/terraform-and-ansible/index.html
+++ b/examples/terraform-and-ansible/index.html
@@ -472,7 +472,7 @@
 -e AWS_SECRET_ACCESS_KEY=skip \
 -e AWS_DEFAULT_REGION=&quot;us-east-1&quot; \
 -v $(pwd):/opt/bitops_deployment \
-connor:test
+bitovi/bitops:latest
 </code></pre>
 
 <p>In the logs you will see:</p>
