--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                 
                 <h1 id="bitops">BitOps</h1>
 <hr />
-<p><img alt="LICENSE" src="https://img.shields.io/github/license/bitovi/bitops" />
-<img alt="Latest Release" src="https://img.shields.io/github/v/release/bitovi/bitops" />
+<p><a href="license/"><img alt="LICENSE" src="https://img.shields.io/github/license/bitovi/bitops" /></a>
+<a href="https://github.com/bitovi/bitops/releases"><img alt="Latest Release" src="https://img.shields.io/github/v/release/bitovi/bitops" /></a>
 <a href="https://www.bitovi.com/community/slack?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img alt="Join our Slack" src="https://img.shields.io/badge/slack-join%20chat-611f69.svg" /></a></p>
 <p>BitOps is a way to describe the infrastructure and things deployed onto that infrastructure for multiple environments in a single place called an <a href="operations-repo-structure/">Operations Repo</a>.</p>
 <hr />
