--- a/operations-repo-structure/index.html
+++ b/operations-repo-structure/index.html
@@ -601,7 +601,7 @@
     │   ├── bitops.after-deploy.d
     │   ├── bitops.before-deploy.d
     │   └── bitops.config.yml
-    │   ├── cloudformation
+    ├── cloudformation
     │   ├── bitops.after-deploy.d
     │   ├── bitops.before-deploy.d
     │   └── bitops.config.yml
