--- a/contributing/contributing/index.html
+++ b/contributing/contributing/index.html
@@ -545,9 +545,8 @@ as a contributor, have the legal right to make the contribution.</p>
 <p>See the <a href="../DCO/">DCO</a> file for the full text of what you must agree to.</p>
 <p>To signify that you agree to the DCO for a commit, you add a line to the git
 commit message:</p>
-<pre><code class="txt">Signed-off-by: Jane Smith &lt;jane.smith@example.com&gt;
+<pre><code class="language-txt">Signed-off-by: Jane Smith &lt;jane.smith@example.com&gt;
 </code></pre>
-
 <p>In most cases, you can add this signoff to your commit automatically with the
 <code>-s</code> flag to <code>git commit</code>. You must use your real name and a reachable email
 address (sorry, no pseudonyms or anonymous contributions).</p>
